0.13.0/_sources/api_ref_decoders.rst.txt
.. _decoders:

===================
torchcodec.decoders
===================

.. currentmodule:: torchcodec.decoders


For a video decoder tutorial, see: :ref:`sphx_glr_generated_examples_decoding_basic_example.py`.
For an audio decoder tutorial, see: :ref:`sphx_glr_generated_examples_decoding_audio_decoding.py`.


.. autosummary::
    :toctree: generated/
    :nosignatures:
    :template: class.rst

    VideoDecoder
    AudioDecoder

.. autosummary::
    :toctree: generated/
    :nosignatures:
    :template: dataclass.rst

    VideoStreamMetadata
    AudioStreamMetadata


CUDA decoding utils
-------------------

.. autosummary::
    :toctree: generated/
    :nosignatures:
    :template: function.rst

    set_cuda_backend
    set_nvdec_cache_capacity
    get_nvdec_cache_capacity

.. autosummary::
    :toctree: generated/
    :nosignatures:
    :template: dataclass.rst

    CpuFallbackStatus
